@@ -126,6 +126,8 @@ new Test.Unit.Runner({
   },
   
   testGrep: function() {
+    this.assertEqual('abc', ['a', 'b', 'c'].grep('').join(''));
+
     this.assertEqual('noradio, htonl', 
       Fixtures.Nicknames.grep(/o/).join(", "));
     
@@ -136,9 +138,18 @@ new Test.Unit.Runner({
 
     this.assertEnumEqual($('grepHeader', 'grepCell'),
       $('grepTable', 'grepTBody', 'grepRow', 'grepHeader', 'grepCell').grep(new Selector('.cell')));
-    
+  },
+  
+  tesGsubSscapesRegExpSpecialCharacters: function() {
     this.assertEqual(';-), :-)',
       Fixtures.Emoticons.grep('-)').join(", "));
+
+    this.assertEnumEqual(['?a', 'c?'], ['?a','b','c?'].grep('?'));
+    this.assertEnumEqual(['*a', 'c*'], ['*a','b','c*'].grep('*'));
+    this.assertEnumEqual(['+a', 'c+'], ['+a','b','c+'].grep('+'));
+    this.assertEnumEqual(['{1}a', 'c{1}'], ['{1}a','b','c{1}'].grep('{1}'));
+    this.assertEnumEqual(['(a', 'c('], ['(a','b','c('].grep('('));
+    this.assertEnumEqual(['|a', 'c|'], ['|a','b','c|'].grep('|'));
   },
   
   testInclude: function() {
